# meta2

./: .gitignore  google_env.sh  messages.jsonl  repomix-output.xml
.agent/memory/: active_context.md  index.md  project_context.md  project_status.md  system_patterns.md
.factory/commands/: black-check.sh  black-fix.sh  black-lint.md  commit-droid.sh  dead-code.md  deadcode-scan.sh  mermaid-create.sh  mermaid-validate.sh  mermaid-watch.sh  pr-create.sh  ruff-check.sh  ruff-fix.sh  ruff-lint.md  typecheck.md  typecheck.sh
.factory/docs/: 2025-11-17-v1-0-0.md  2025-11-18-droid.md  2025-11-19-erd-tb-users-projects-reviews.md  2025-11-19-erd.md  2025-11-19-mermaid-create.md  2025-11-19-mermaid-erd.md  2025-11-19-polish-mermaid-erd-and-creation-tools.md
.factory/droids/: black-format.md  commit.md  dead-code-scan.md  mermaid-create.md  pr-create.md  ruff-fix.md  (+1 more)
data-importer/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  alembic.ini  pyproject.toml
data-importer/.git_backup/: COMMIT_EDITMSG  config  index
data-importer/.git_backup/hooks/: pre-commit
data-importer/.git_backup/refs/heads/: main
data-importer/.git_backup/refs/remotes/origin/: main
data-importer/migrations/: env.py
data-importer/migrations/versions/: dac9eb249997_create_users_roles_projects_and_reviews_.py
data-importer/scripts/: init_project.sh  run_dev.sh  run_tests.sh
data-importer/src/data_importer/: __init__.py  __main__.py  main.py
data-importer/src/data_importer/api/: deps.py
data-importer/src/data_importer/api/endpoints/: __init__.py  import_.py
data-importer/src/data_importer/config/: database.py  settings.py
data-importer/src/data_importer/models/: __init__.py  project.py  user.py
data-importer/src/data_importer/schemas/: __init__.py  project.py  user.py
data-importer/src/data_importer/services/: data_processor.py  google_sheets.py  import_service.py
data-importer/src/data_importer/utils/: __init__.py  validation.py
data-importer/src/data_importer/validation/: __init__.py  rules.py
doc/: data-importer-architecture.md  db-erd.md  erd-3levels-symmetric.md  mentor_profiles.csv
(+14 files in other folders)
